[package]
name = "playspace"
version = "0.1.0"
edition = "2021"

[features]
default = ["sync"]
sync = ["parking_lot"]
async = ["async-mutex", "lazy_static"]

[dependencies]
parking_lot = { version = "0.12", features = ["send_guard"], optional = true }
tempfile = "3.3"
thiserror = "1.0"
static_assertions = "1.1"
async-mutex = { version = "1.4", optional = true }
lazy_static = { version = "1.4", optional = true }

[dev-dependencies]
serial_test = "0.6"
tokio = { version = "1", features = ["macros", "rt", "fs", "sync", "time"] }
async-std = { version = "1", features = ["attributes"] }
futures = "0.3"
parking_lot = { version = "0.12", features = ["send_guard"] }
